--- a/src/theme/icons.scss
+++ b/src/theme/icons.scss
@@ -98,6 +98,10 @@
   content: url("../assets/fonts/paihangbangHeader.svg");
 }
 
+.ion-md-fenleiHeader:before {
+  content: url("../assets/fonts/fenleiHeader.svg");
+}
+
 .ion-md-setting:before {
   content: url("../assets/fonts/setting.svg");
 }
@@ -111,3 +115,32 @@
    content: url("../assets/fonts/youjiantou.svg");
 }
 
+.ion-md-xiangkan:before {
+  content: url("../assets/fonts/xiangkan.svg");
+}
+.ion-md-xiangkan-outline:before {
+  content: url("../assets/fonts/xiangkan_1.svg");
+}
+
+.ion-md-dianzan:before {
+  content: url("../assets/fonts/dianzan.svg");
+}
+.ion-md-dianzan-outline:before {
+  content: url("../assets/fonts/dianzan_1.svg");
+}
+.ion-md-commentIcon:before {
+  content: url("../assets/fonts/commentIcon.svg");
+}
+
+.ion-md-movieTicket:before {
+  content: url("../assets/fonts/movie-ticket.svg");
+}
+.ion-md-youhuiquan:before {
+  content: url("../assets/fonts/youhuiquan.svg");
+}
+.ion-md-fansIcon:before {
+  content: url("../assets/fonts/fans.svg");
+}
+.ion-md-followIcon:before {
+  content: url("../assets/fonts/follow.svg");
+}
