--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -39,11 +39,11 @@ page-home {
   right: .62em;
 }
 .banner{
-  margin-bottom: .6em;
+  margin-top: .2rem;
 }
 .banner .slide-image{
   width: 100%;
-  height: 16rem;
+  height: 14rem;
 }
 .banner ion-slides ion-slide{
   opacity: 1;
@@ -97,7 +97,7 @@ page-home {
 .home-comesoon{
   border-top: 2px solid #555;
   border-bottom: 2px solid #555;
-  margin-top: 1.4rem;
+  margin-top: 1rem;
   border-radius: 1.4rem;
 }
 
