--- a/src/pages/movie-detail/movie-detail.scss
+++ b/src/pages/movie-detail/movie-detail.scss
@@ -11,22 +11,28 @@
   width: 100%;
   height: 100%;
 }
+.movieDetail-content .scroll-content{
+  margin-bottom: 0 !important;
+}
+
 .movieDetail-top .item-md.item-block,
 .movieDetail-top .item-md.item-block .item-inner{
   border-bottom: 0;
 }
 .movieDetail-top ion-item ion-thumbnail img{
-  height: 8.4rem;
+  width: 6.8rem;
+  height: 9.4rem;
 }
 .movieDetail-top ion-item h2{
+  font-size: 1.8rem;
   font-weight: 700;
 }
-.movieDetail-top ion-item p:nth-of-type(2) span{
+.movieDetail-top ion-item p:nth-of-type(3) span{
   font-size: 1rem;
   padding: .2rem;
   margin-left: .6rem;
 }
-.movieDetail-top ion-item p:nth-of-type(3) span{
+.movieDetail-top ion-item p:nth-of-type(4) span{
   font-weight: 700;
   color: #F51933;
 }
@@ -64,7 +70,6 @@
 
 .movieDetail-actor .swiper-container{
   overflow-x: scroll;
-  scroll:hidden;
   background-color: #eeeeee;
 }
 .movieDetail-actor .swiper-container .swiper-wrapper .swiper-slide{
@@ -89,9 +94,13 @@
   text-overflow:ellipsis;
   white-space: nowrap;
 }
+.movieDetail-actor .swiper-slide img{
+  width: 6.4rem;
+  height: 8rem;
+}
 .movieDetail-actor .swiper-slide p:first-of-type{
   color: #000;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
 }
 
 .movieDetail-bottom{
@@ -99,7 +108,15 @@
   height: 100%;
   margin-top: .8rem;
 }
-
+.movieDetail-tabsContent{
+  height: 100%;
+}
+.movieDetail-tabsContent ion-scroll{
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 .movieDetail-tabsContent .list-md{
   margin-bottom: 0;
   border: 1px solid #eee;
@@ -133,10 +150,19 @@
   border-bottom: 2px solid #00A0E2;
 }
 
+.movieDetail-tabsContent .swiper-slide{
+  align-items: normal;
+}
+.film-summary,
+.film-comment,
+.discussion{
+  height: 100%;
+  display: block;
+  overflow-y: hidden;
+}
 .film-summary{
   width: 100%;
   background-color: #fff;
-  overflow: hidden;
 }
 .film-summary p{
   font-size: 1.6rem;
@@ -224,7 +250,7 @@
 }
 
 .movieDetail-footer .button-md{
+  width: 100%;
   padding: 0;
   margin: 0;
-  width: 100%;
 }
